_sass/project-post.scss
.gen {
  h1 {
    background-color: $theme-fg;
    color: white;
    text-shadow: 1px 1px 0 $theme-accent;

    font-weight: 700;

    display: inline-block;
    padding: 10px 15px;
    margin: 20px 0;
  }

  h2 {
    font-weight: 700;
    font-size: 1.6em;
  }

  img {
    max-width: 100%;
    display: block;
    margin: 2rem auto;

    @media (max-width: 576px) {
      max-width: unset !important;
    }

    &.short {
     max-height: 400px;
    }

    &.med {
      max-height: 600px;
    }
  }

  .embed-responsive {
    margin: 2rem auto;
    border: 5px solid $theme-fg;
    max-width: 700px;
  }
}

